# CoRECT

./: .gitignore  README.md  index.html  pyproject.toml
docs/: index.html
share_results/E5MultilingualWrapper/arguana/dim=1024/q=16_casting/: arguana.json
share_results/E5MultilingualWrapper/arguana/dim=1024/q=1_median/: arguana.json
share_results/E5MultilingualWrapper/arguana/dim=1024/q=2_percentile/: arguana.json
share_results/E5MultilingualWrapper/arguana/dim=1024/q=32/: arguana.json
share_results/E5MultilingualWrapper/arguana/dim=1024/q=4_percentile/: arguana.json
share_results/E5MultilingualWrapper/arguana/dim=1024/q=8_percentile/: arguana.json
share_results/E5MultilingualWrapper/arguana/dim=128/q=16_casting/: arguana.json
share_results/E5MultilingualWrapper/arguana/dim=128/q=1_median/: arguana.json
share_results/E5MultilingualWrapper/arguana/dim=128/q=2_percentile/: arguana.json
share_results/E5MultilingualWrapper/arguana/dim=128/q=32/: arguana.json
share_results/E5MultilingualWrapper/arguana/dim=128/q=4_percentile/: arguana.json
share_results/E5MultilingualWrapper/arguana/dim=256/q=32/: arguana.json
src/corect/: compression_registry.py  config.py  corect.py  dataset_utils.py  eval_utils.py  utils.py
src/corect/cli/: evaluate.py
src/corect/cli/visualize/: heatmap.py  line_chart.py
src/corect/model_wrappers/: AbstractModelWrapper.py  E5MultilingualWrapper.py  JinaV3Wrapper.py  __init__.py  utils.py
src/corect/quantization/: AbstractCompression.py  BinaryCompression.py  FloatCompression.py  MinMaxCompression.py  PercentileCompression.py
(+2699 files in other folders)
